testData/diagnostics/var_scope_1.diag.txt
testData/diagnostics/var_scope_1.nut line = (4) column = (6) : error: Unknown variable [x]
print(x)
      ^

